<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/porovnavanie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="32sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/compDiffHeading" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@string/btn_do_10"
            android:onClick="compUnder10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/porov_10"
            android:layout_weight="1" />

        <Button
            android:text="@string/btn_do_20"
            android:onClick="compUnder20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/porov_20"
            android:layout_weight="1" />

        <Button
            android:text="@string/btn_do_100"
            android:onClick="compUnder100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/porov_100"
            android:layout_weight="1" />
    </LinearLayout>


</RelativeLayout>