<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >




    <LinearLayout
        android:id="@+id/compSolvHeading"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/porovnavanie"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tHeading2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/compSolvTask"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/compSolvButtons"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="105dp">

        <TextView
            android:text="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/compTaskTextLeft"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="52sp" />

        <TextView
            android:text="\?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/compTaskTextMid"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="52sp" />

        <TextView
            android:text="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/compTaskTextRight"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textSize="52sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/compSolvButtons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/gt"
            android:onClick="solveTaskGT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/btnGt"
            android:layout_weight="1" />

        <Button
            android:text="="
            android:onClick="solveTaskEQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/btnEq"
            android:layout_weight="1" />

        <Button
            android:text="@string/lt"
            android:onClick="solveTaskLT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/btnLt"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/allTasks"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="1" />

            <TextView
                android:text="0"
                android:layout_marginRight="20dp"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/compSolvAllTaskNum"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/correctTasks"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_weight="1" />

            <TextView
                android:text="0"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                android:textColor="@color/green"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/compSolvCorrectTaskNum"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/failTasks"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_weight="1" />

            <TextView
                android:text="0"
                android:layout_marginRight="20dp"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textColor="@color/red"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/compSolvFailTaskNum"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_marginBottom="20dp"
        android:format="%s"
        android:layout_centerHorizontal="true"
        android:id="@+id/chron2"
        />


</RelativeLayout>