<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/choose_difficulty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="david.matematickepriklady.ui.activities.ChooseActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        >

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="32sp"
            android:id="@+id/tHeading" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <LinearLayout
            android:id="@+id/defaultDiffLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            >

            <Button
                android:text="@string/btn_do_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choose"
                android:id="@+id/btnMax10" />

            <Button
                android:text="@string/btn_do_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:onClick="choose"
                android:id="@+id/btnMax20" />

            <Button
                android:text="@string/btn_do_100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choose"
                android:id="@+id/btnMax100" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/extDiffRow1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="2x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choose"
                android:id="@+id/btn2"
                android:layout_weight="1" />

            <Button
                android:text="3x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choose"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/btn3"
                android:layout_weight="1" />

            <Button
                android:text="4x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choose"
                android:id="@+id/btn4"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/extDiffRow2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <Button
                android:text="5x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choose"
                android:id="@+id/btn5"
                android:layout_weight="1" />

            <Button
                android:text="6x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choose"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/btn6"
                android:layout_weight="1" />

            <Button
                android:text="7x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choose"
                android:id="@+id/btn7"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/extDiffRow3"

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="8x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choose"
                android:id="@+id/btn8"
                android:layout_weight="1" />

            <Button
                android:text="9x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choose"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/btn9"
                android:layout_weight="1" />

            <Button
                android:text="10x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choose"
                android:id="@+id/btn10"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
